codama-macros/tests/codama_attribute/type_nodes/number_type_node/unrecognized_attribute.fail.rs
use codama_macros::codama;

#[codama(type = number(u32, unrecognized = 42, le))]
pub struct Test;

fn main() {}
